# ltc_code

./: .gitignore  CMakeLists.txt  README.md  ltc-config.cmake.in  vcpkg.json
fit/: CMakeLists.txt  LTC.h  brdf.h  brdf_beckmann.cpp  brdf_beckmann.h  brdf_disneyDiffuse.h  brdf_disney_diffuse.cpp  brdf_ggx.cpp  brdf_ggx.h  dds.cpp  dds.h  export.cpp  export.h  fitLTC.cpp  float_to_half.cpp  float_to_half.h  nelder_mead.h  plot.cpp  plot.h
fit/results/: ltc.h
fit_app/: CMakeLists.txt
fit_app/src/: main.cpp
fit_lib/: CMakeLists.txt
fit_lib/include/ltc/: brdf.h  brdf_beckmann.h  brdf_disney_diffuse.h  brdf_ggx.h  export.h  fit_LTC.h  plot.h
fit_lib/src/: LTC.cpp  LTC.h  brdf_beckmann.cpp  brdf_disney_diffuse.cpp  brdf_ggx.cpp  dds.cpp  export.cpp  fit_LTC.cpp  float_to_half.h  plot.cpp
webgl/fit/results/: ltc.js
